<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.GuitarDetailFragment">

    <ImageView
        android:id="@+id/imgFav"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="26dp"
        android:src="@drawable/fav_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:backgroundTint="#B40D20"
        android:src="@drawable/search_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/txMarcaDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/brand"
        android:textSize="23dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txModeloDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:text="@string/model"
        android:textSize="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txMarcaDetail" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txModeloDetail" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="490dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:id="@+id/lnlData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailId"
                android:textAppearance="?android:attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/tvForma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailShape"
                android:textAppearance="?android:attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/tvCuerpo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailBody"
                android:textAppearance="?android:attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/tvMastil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailNeck"
                android:textAppearance="?android:attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/tvDiapason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailFretboard"
                android:textAppearance="?android:attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/tvConfiguracion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailConfig"
                android:textAppearance="?android:attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/tvPastillas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailPickUps"
                android:textAppearance="?android:attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/tvTrastes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailFrets"
                android:textAppearance="?android:attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/tvCuerdas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailStrings"
                android:textAppearance="?android:attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/tvTremolo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailTremolo"
                android:textAppearance="?android:attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/tvPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailPrice"
                android:textAppearance="?android:attr/textAppearanceListItem" />

        </LinearLayout>

    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvNoData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="25dp"
        android:visibility="invisible"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieNoConnection"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/noconnection" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/noDetailTitle"
                android:textSize="23dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lottieNoConnection" />

            <TextView
                android:id="@+id/tvInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:text="@string/noConnectionInfo"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>